--- a/client/package.json
+++ b/client/package.json
@@ -1,18 +1,11 @@
 {
   "name": "client",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/server/index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "vite",
-    "start": "node dist/server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "shared": "workspace:",
     "socket.io-client": "^4.8.1"
