--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,17 +1,16 @@
 {
     "compilerOptions": {
-        "target": "es2022",
-        "module": "commonjs",
+        "module": "esnext",
+        "moduleResolution": "node",
         "declaration": true,
-        //"rootDir": "./src",
         "esModuleInterop": true,
         "outDir": "dist",
-        //"moduleResolution": "node",
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
+        "allowSyntheticDefaultImports": true
     },
     "include": [
         "src",
