--- a/shared/package.json
+++ b/shared/package.json
@@ -1,15 +1,8 @@
 {
   "name": "shared",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "./dist/index",
   "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "module"
 }
