--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -1,26 +1,21 @@
 {
     "compilerOptions": {
-        "target": "es2018",
-        "module": "esnext",
-        //"rootDir": "./",
         "strict": true,
         "declaration": true,
         "outDir": "dist",
         "esModuleInterop": true,
+        "module": "es2015",
+        "moduleResolution": "node",
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "moduleResolution": "bundler",
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "lib": [
             "dom",
             "es2018"
-        ]
+        ],
     },
     "include": [
         "src",
-    ],
-    "exclude": [
-        "node_modules"
     ]
 }
