--- a/shared/package.json
+++ b/shared/package.json
@@ -2,7 +2,8 @@
   "name": "shared",
   "main": "./dist/index",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsc --watch --preserveWatchOutpu"
   },
   "type": "module"
 }
