--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "concurrently": "^9.2.0",
-    "typescript": "^5.8.3"
+    "eslint": "^9.31.0",
+    "eslint-plugin-perfectionist": "^4.15.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.37.0"
   }
 }
