--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "pixi.js": "^8.11.0",
     "shared": "workspace:",
     "socket.io-client": "^4.8.1"
   },
