--- a/shared/package.json
+++ b/shared/package.json
@@ -3,7 +3,7 @@
   "main": "./dist/index",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch --preserveWatchOutpu"
+    "dev": "tsc --watch --preserveWatchOutput"
   },
   "type": "module"
 }
