--- a/client/package.json
+++ b/client/package.json
@@ -1,17 +1,22 @@
 {
   "name": "client",
   "scripts": {
-    "build": "tsc",
+    "build": "vue-tsc && vite build",
     "dev": "vite"
   },
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "pinia": "^3.0.3",
     "pixi.js": "^8.11.0",
     "shared": "workspace:",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "vite": "^7.0.4"
+    "@vitejs/plugin-vue": "^6.0.0",
+    "vite": "^7.0.4",
+    "vue-tsc": "^3.0.1"
   }
 }
